--- a/src/output.css
+++ b/src/output.css
@@ -560,24 +560,12 @@ video {
   position: fixed;
 }
 
-.absolute{
-  position: absolute;
-}
-
 .relative{
   position: relative;
 }
 
-.inset-0{
-  inset: 0px;
-}
-
 .bottom-0{
   bottom: 0px;
-}
-
-.left-0{
-  left: 0px;
 }
 
 .z-10{
@@ -589,8 +577,20 @@ video {
   margin-right: auto;
 }
 
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 
 .ml-2{
@@ -607,30 +607,6 @@ video {
 
 .mt-7{
   margin-top: 1.75rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.ml-3{
-  margin-left: 0.75rem;
-}
-
-.mr-3{
-  margin-right: 0.75rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
 }
 
 .flex{
@@ -653,6 +629,10 @@ video {
   height: 3rem;
 }
 
+.h-24{
+  height: 6rem;
+}
+
 .h-48{
   height: 12rem;
 }
@@ -665,12 +645,8 @@ video {
   height: 100vh;
 }
 
-.h-24{
-  height: 6rem;
-}
-
-.min-h-screen{
-  min-height: 100vh;
+.w-1\/2{
+  width: 50%;
 }
 
 .w-10{
@@ -679,6 +655,10 @@ video {
 
 .w-12{
   width: 3rem;
+}
+
+.w-24{
+  width: 6rem;
 }
 
 .w-40{
@@ -693,20 +673,8 @@ video {
   width: 100%;
 }
 
-.w-1\/2{
-  width: 50%;
-}
-
-.w-24{
-  width: 6rem;
-}
-
 .max-w-4xl{
   max-width: 56rem;
-}
-
-.max-w-lg{
-  max-width: 32rem;
 }
 
 .max-w-md{
@@ -723,10 +691,6 @@ video {
 
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.flex-row{
-  flex-direction: row;
 }
 
 .flex-row-reverse{
@@ -755,14 +719,6 @@ video {
 
 .justify-between{
   justify-content: space-between;
-}
-
-.justify-stretch{
-  justify-content: stretch;
-}
-
-.justify-items-end{
-  justify-items: end;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
@@ -801,12 +757,6 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
@@ -823,14 +773,14 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-l-lg{
-  border-top-left-radius: 0.5rem;
+.rounded-b-lg{
+  border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
 }
 
-.rounded-t{
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
+.rounded-l-lg{
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 
 .rounded-t-lg{
@@ -838,26 +788,20 @@ video {
   border-top-right-radius: 0.5rem;
 }
 
-.rounded-b{
-  border-bottom-right-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-
-.rounded-b-lg{
-  border-bottom-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
-
 .border-2{
   border-width: 2px;
 }
 
-.border-t{
-  border-top-width: 1px;
+.border{
+  border-width: 1px;
 }
 
 .border-t-2{
   border-top-width: 2px;
+}
+
+.border-r{
+  border-right-width: 1px;
 }
 
 .border-Coolgray{
@@ -870,19 +814,9 @@ video {
   border-color: hsl(229 24% 87% / var(--tw-border-opacity));
 }
 
-.bg-Lightblue{
-  --tw-bg-opacity: 1;
-  background-color: hsl(206 94% 87% / var(--tw-bg-opacity));
-}
-
-.bg-Marineblue{
-  --tw-bg-opacity: 1;
-  background-color: hsl(213 96% 18% / var(--tw-bg-opacity));
-}
-
-.bg-White{
-  --tw-bg-opacity: 1;
-  background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
+.border-White{
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 100% / var(--tw-border-opacity));
 }
 
 .bg-Coolgray{
@@ -890,9 +824,19 @@ video {
   background-color: hsl(231 11% 63% / var(--tw-bg-opacity));
 }
 
-.bg-Purplishblue{
+.bg-Lightblue{
   --tw-bg-opacity: 1;
-  background-color: hsl(243 100% 62% / var(--tw-bg-opacity));
+  background-color: hsl(206 94% 87% / var(--tw-bg-opacity));
+}
+
+.bg-Magnolia{
+  --tw-bg-opacity: 1;
+  background-color: hsl(217 100% 97% / var(--tw-bg-opacity));
+}
+
+.bg-Marineblue{
+  --tw-bg-opacity: 1;
+  background-color: hsl(213 96% 18% / var(--tw-bg-opacity));
 }
 
 .bg-Pastelblue{
@@ -900,19 +844,14 @@ video {
   background-color: hsl(228 100% 84% / var(--tw-bg-opacity));
 }
 
-.bg-Lightgray{
+.bg-Purplishblue{
   --tw-bg-opacity: 1;
-  background-color: hsl(229 24% 87% / var(--tw-bg-opacity));
+  background-color: hsl(243 100% 62% / var(--tw-bg-opacity));
 }
 
-.bg-Alabaster{
+.bg-White{
   --tw-bg-opacity: 1;
-  background-color: hsl(231 100% 99% / var(--tw-bg-opacity));
-}
-
-.bg-Magnolia{
-  --tw-bg-opacity: 1;
-  background-color: hsl(217 100% 97% / var(--tw-bg-opacity));
+  background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\.\/images\/bg-sidebar-desktop\.svg\'\)\]{
@@ -943,32 +882,12 @@ video {
   padding: 1.5rem;
 }
 
-.p-9{
-  padding: 2.25rem;
+.p-10{
+  padding: 2.5rem;
 }
 
-.p-12{
-  padding: 3rem;
-}
-
-.p-20{
-  padding: 5rem;
-}
-
-.p-0{
-  padding: 0px;
-}
-
-.p-1{
-  padding: 0.25rem;
-}
-
-.p-14{
-  padding: 3.5rem;
-}
-
-.p-8{
-  padding: 2rem;
+.p-3{
+  padding: 0.75rem;
 }
 
 .px-10{
@@ -991,6 +910,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -1004,52 +928,6 @@ video {
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.px-9{
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
-}
-
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
-}
-
-.pt-1{
-  padding-top: 0.25rem;
-}
-
-.pt-10{
-  padding-top: 2.5rem;
-}
-
-.pt-12{
-  padding-top: 3rem;
 }
 
 .pt-14{
@@ -1093,16 +971,16 @@ video {
   font-weight: 700;
 }
 
+.font-extrabold{
+  font-weight: 800;
+}
+
 .font-medium{
   font-weight: 500;
 }
 
 .font-semibold{
   font-weight: 600;
-}
-
-.font-extrabold{
-  font-weight: 800;
 }
 
 .text-Coolgray{
@@ -1115,32 +993,18 @@ video {
   color: hsl(213 96% 18% / var(--tw-text-opacity));
 }
 
-.text-White{
-  --tw-text-opacity: 1;
-  color: hsl(0 0% 100% / var(--tw-text-opacity));
-}
-
-.text-Pastelblue{
-  --tw-text-opacity: 1;
-  color: hsl(228 100% 84% / var(--tw-text-opacity));
-}
-
-.text-Lightblue{
-  --tw-text-opacity: 1;
-  color: hsl(206 94% 87% / var(--tw-text-opacity));
-}
-
 .text-Purplishblue{
   --tw-text-opacity: 1;
   color: hsl(243 100% 62% / var(--tw-text-opacity));
 }
 
-.underline{
-  text-decoration-line: underline;
+.text-White{
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 100% / var(--tw-text-opacity));
 }
 
-.opacity-30{
-  opacity: 0.3;
+.underline{
+  text-decoration-line: underline;
 }
 
 .shadow-lg{
