Done with deskop, remianing the js finctionality

--- a/src/output.css
+++ b/src/output.css
@@ -838,6 +838,11 @@ video {
   background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
 }
 
+.bg-Strawberryred{
+  --tw-bg-opacity: 1;
+  background-color: hsl(354 84% 57% / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\.\/images\/bg-sidebar-desktop\.svg\'\)\]{
   background-image: url('./images/bg-sidebar-desktop.svg');
 }
