Done with desktop

--- a/src/output.css
+++ b/src/output.css
@@ -569,10 +569,6 @@ video {
   margin-right: auto;
 }
 
-.mb-2{
-  margin-bottom: 0.5rem;
-}
-
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -727,6 +723,12 @@ video {
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -743,12 +745,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden{
@@ -1120,4 +1116,27 @@ input:checked + .slider:before {
 .hover\:ring-Pastelblue:hover{
   --tw-ring-opacity: 1;
   --tw-ring-color: hsl(228 100% 84% / var(--tw-ring-opacity));
+}
+
+@media (min-width: 1024px){
+  .lg\:rounded-l-lg{
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+  }
+
+  .lg\:bg-\[url\(\'\.\/images\/bg-sidebar-desktop\.svg\'\)\]{
+    background-image: url('./images/bg-sidebar-desktop.svg');
+  }
+
+  .lg\:bg-contain{
+    background-size: contain;
+  }
+
+  .lg\:bg-no-repeat{
+    background-repeat: no-repeat;
+  }
+
+  .lg\:p-5{
+    padding: 1.25rem;
+  }
 }
